// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine:exact basic create node: bazNote 1`] = `
Object {
  "body": "",
  "data": Object {},
  "desc": "",
  "fname": "baz",
  "stub": false,
  "title": "baz",
  "type": "note",
}
`;

exports[`engine:exact basic fetch node 1`] = `
Object {
  "body": "",
  "children": Array [
    "foo.one",
    "foo.two",
  ],
  "created": 123,
  "data": Object {
    "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
  },
  "desc": "",
  "fname": "foo",
  "id": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
  "updated": 456,
}
`;

exports[`engine:exact basic fetch node: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
]
`;

exports[`engine:exact basic updateNode: bazNote 1`] = `
Object {
  "body": "",
  "data": Object {},
  "desc": "",
  "fname": "baz",
  "stub": false,
  "title": "baz",
  "type": "note",
}
`;

exports[`engine:exact basic updateNode: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
]
`;

exports[`engine:exact edge md exist, no schema file: listDir 1`] = `
Array [
  "foo.md",
  "foo.one.md",
  "foo.two.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine:exact edge md exist, no schema file: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
]
`;

exports[`engine:exact edge no md file, no schema : listDir 1`] = `
Array [
  "foo.md",
  "foo.one.md",
  "foo.two.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine:exact edge no md file, no schema : main 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
]
`;

exports[`engine:exact edge no md file, schema exist: fooNote 1`] = `
Object {
  "body": "",
  "children": Array [
    "foo.one",
    "foo.two",
  ],
  "data": Object {
    "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
  },
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
}
`;

exports[`engine:exact edge no md file, schema exist: listDir 1`] = `
Array [
  "foo.md",
  "foo.one.md",
  "foo.schema.yml",
  "foo.two.md",
  "root.md",
]
`;

exports[`engine:exact edge no md file, schema exist: main 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
]
`;

exports[`engine:exact edge note without fm: fooNote 1`] = `
Object {
  "body": "this is foo",
  "children": Array [
    "foo.one",
    "foo.two",
  ],
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
}
`;

exports[`engine:exact edge note without id: fooNote 1`] = `
Object {
  "body": "this is foo
",
  "children": Array [
    "foo.one",
    "foo.two",
  ],
  "data": Object {},
  "desc": "",
  "fname": "foo",
  "parent": "root",
  "stub": false,
  "title": "foo",
  "type": "note",
}
`;

exports[`engine:exact main delete node with children: listDi2 1`] = `
Array [
  "foo.one.md",
  "foo.schema.yml",
  "foo.two.md",
  "root.md",
]
`;

exports[`engine:exact main delete node with children: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": true,
    "title": "foo",
    "type": "note",
  },
]
`;

exports[`engine:exact main delete node with children: main2 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
    ],
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": true,
    "title": "foo",
    "type": "note",
  },
]
`;

exports[`engine:exact main open stub node: listDir 1`] = `
Array [
  "bar.two.md",
  "foo.md",
  "foo.one.md",
  "foo.schema.yml",
  "foo.two.md",
  "root.md",
]
`;

exports[`engine:exact main open stub node: listDir2 1`] = `
Array [
  "bar.two.md",
  "foo.md",
  "foo.one.md",
  "foo.schema.yml",
  "foo.two.md",
  "root.md",
]
`;

exports[`engine:exact main open stub node: main 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "bar",
    ],
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
    ],
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "bar.two",
    ],
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "parent": "root",
    "stub": true,
    "title": "bar",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "bar.two.body
",
    "children": Array [],
    "data": Object {},
    "desc": "",
    "fname": "bar.two",
    "parent": "bar",
    "stub": false,
    "title": "bar.two",
    "type": "note",
  },
]
`;
